# ImGui-Calculator

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/imgui/calculator/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ImGui/backends/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
app/src/main/java/com/imgui/calculator/: GLES3JNIView.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/imgui/calculator/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
